--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,55 @@ _pgbackup/pinegrow_1694450730.json
 _pgbackup/pinegrow_1694450738.json
 _pgbackup/pinegrow_1694461017.json
 _pgbackup/pinegrow_1694461018.json
+_pgbackup/css/style_1694561655.css
+_pgbackup/css/style_1694561893.css
+_pgbackup/css/style_1694560587.css
+_pgbackup/css/style_1694561610.css
+_pgbackup/css/style_1694560488.css
+_pgbackup/css/style_1694560423.css
+_pgbackup/css/style_1694559541.scss
+_pgbackup/css/style_1694549224.scss
+_pgbackup/css/style_1694548632.scss
+_pgbackup/css/style_1694561893.scss
+_pgbackup/css/style_1694562010.css
+_pgbackup/css/style_1694562250.css
+_pgbackup/css/style_1694562307.css
+_pgbackup/css/style_1694562278.css
+_pgbackup/css/style_1694562307.scss
+_pgbackup/css/style_1694616003.css
+_pgbackup/css/style_1694616552.css
+_pgbackup/css/style_1694616150.css
+_pgbackup/css/style_1694616030.css
+_pgbackup/css/style_1694616647.css
+_pgbackup/css/style_1694617051.css
+_pgbackup/css/style_1694617052.scss
+_pgbackup/css/style_1694617079.css
+_pgbackup/css/style_1694617080.css
+_pgbackup/css/style_1694617140.css
+_pgbackup/css/style_1694617105.css
+_pgbackup/index_1694548631.html
+_pgbackup/index_1694549467.html
+_pgbackup/index_1694549611.html
+_pgbackup/index_1694556546.html
+_pgbackup/index_1694558892.html
+_pgbackup/index_1694560788.html
+_pgbackup/index_1694561897.html
+_pgbackup/index_1694616012.html
+_pgbackup/index_1694616499.html
+_pgbackup/index_1694617256.html
+_pgbackup/index_1694617833.html
+_pgbackup/pinegrow_1694544707.json
+_pgbackup/pinegrow_1694548631.json
+_pgbackup/pinegrow_1694548632.json
+_pgbackup/pinegrow_1694549467.json
+_pgbackup/pinegrow_1694549611.json
+_pgbackup/pinegrow_1694556546.json
+_pgbackup/pinegrow_1694558892.json
+_pgbackup/pinegrow_1694559706.json
+_pgbackup/pinegrow_1694560788.json
+_pgbackup/pinegrow_1694561897.json
+_pgbackup/pinegrow_1694562160.json
+_pgbackup/pinegrow_1694616012.json
+_pgbackup/pinegrow_1694616499.json
+_pgbackup/pinegrow_1694617256.json
+_pgbackup/pinegrow_1694617833.json
